assets/scss/main.scss
/* ... */
.header {
  @include section-header;
  text-transform: capitalize;
}
a {
  &.button {
    text-decoration: none;
    filter: none;
    color: white;
    background: $wallet-button-gradient;
  }
  &.center {
    display: block;
    margin: 0 auto;
  }
}

a.button {
  width: 230px;
}
footer {
  position: relative;
  @include column;
  align-items: center;
  background-color: $coke-footer-background-color;
  text-align: center;
  width: 100%;
  /* padding:1em; */
  justify-content: center;
  align-items: center;
  .footer-text {
    max-width: 400px;
    margin: auto;
  }

  & a + a:before {
    content: "|";
    padding: 0 $content-hpadding;
  }

  & p + p {
    margin-top: 1em;
  }
}
.img-footer {
  position: absolute;
  bottom: -30px;
  left: 0px;
  right: 0px;
  max-width: 1050px;
  margin: auto;
  overflow: visible;
  @media only screen and (max-width: 767px) {
    bottom: -15px;
  }
}

.nav {
  &-button {
    @include column;
    justify-content: center;
    align-items: center;
    width: 50px;
    height: 50px;
    border-radius: 100%;
    background-color: white;

    @include breakpoint(lg) {
      width: 65px;
      height: 65px;
    }

    & > div {
      pointer-events: none;
    }
    & span {
      display: block;
      background: black;
      height: 2px;
      border-radius: 5px;
      width: 18px;
      transition: transform 0.5s, opacity 0.5s;
      transform-origin: left center;

      & + span {
        margin-top: 4px;
      }
      &:nth-child(2) {
        opacity: 1;
        transform: scaleX(0.6);
      }
      &:last-child {
        transform: scaleX(0.8);
      }
    }

    &.active {
      span {
        margin-top: 0;
        &:first-child {
          transform: translate(1px, -5px) scaleX(1.5) rotate(55deg);
        }
        &:nth-child(2) {
          opacity: 0;
        }
        &:last-child {
          transform: translate(1px, 6px) scaleX(1.5) rotate(-55deg);
        }
      }
    }
  }
}

.profile {
  &-button {
    @include row;
    height: 50px;
    border-radius: 65px;
    background: black;
    filter: $shadow;
    transition: background 0.3s;
    z-index: 12;
    @include breakpoint(lg) {
      height: 65px;
    }

    &.dark {
      background: $wallet-button-gradient;
    }
  }

  & > * {
    pointer-events: none;
  }
  &-image {
    width: 50px;
    height: 50px;
    border-radius: 100%;
    @include breakpoint(lg) {
      width: 65px;
      height: 65px;
    }
  }

  &-content {
    @include row;
    justify-content: center;
    align-items: center;
    height: 100%;
    padding: 10px 50px;

    > * {
      position: relative;
      font-size: 0.75rem;
      @include breakpoint(lg) {
        line-height: initial;
      }
    }
    > * + * {
      margin-left: 50px;
    }
    > * + *:before {
      content: "";
      position: absolute;
      left: -25px;
      display: block;
      height: 100%;
      width: 2px;
      background: white;
    }

    .user-coins {
      font-size: 1.5rem;
      font-weight: bold;
      line-height: 1em;
      @include breakpoint(lg) {
        line-height: initial;
      }
    }

    img {
      width: 19px;
      height: 19px;
      @include breakpoint(lg) {
        width: auto;
        height: auto;
      }
    }
  }
}

#masthead {
  max-width: 1280px;
  padding: 0;

  & .masthead-content {
    position: absolute;
    top: calc(82px + 1rem);
    left: 0;
    @include column;
    padding: 0 $content-hpadding;
    @include breakpoint(md) {
      top: calc(82px + 2rem);
      padding: 0 2rem;
    }
    @include breakpoint(lg) {
      top: 0;
      bottom: 0;
      width: 50%;
      justify-content: center;
      padding: 0 $masthead-hpadding;
    }
    & h1 {
      margin-bottom: 0.5em;
      font-size: 1.285rem;

      @include breakpoint(md) {
        font-size: 2.375rem;
      }
    }
  }
}

.container {
  @include column;
  position: relative;
  max-width: $content-max-width !important;
  overflow: hidden;
  width: 100%;
  padding: 0 $content-hpadding;
  @include breakpoint(md) {
    padding: 0 2em;
  }
}

.draw .all-text {
  h4 {
    /* margin: 3cm 2cm 0 1cm; */
    text-align: center;
    color: white;
    font-size: 3.9vw;
    font-family: "Hackney";
  }
  p {
    text-align: center;
    color: white;
    font-size: 1.65vw;
    font-family: "Avenir";
  }
  @media (max-width: 1300px) {
      p {
        font-size: 1.7vw;
      }

  }

  @media (max-width: 834px) {
      p {
        font-size: 2.5vw;
      }

  }

  @media (max-width: 600px) {
      p {
        font-size: 2.7vw;
      }
      h4 {
        font-size: 7vw;
      }

  }
}

.header-redeem {
  /* height: 20% */
  p {
    font-size: 275%;
    font-family: "Hackney";
  }
  @media screen and (max-width: 736px) {

          p {
            font-size: 26px;
          }



  }

  @media screen and (max-width: 400px){


      p {
        font-size: 225%;
        font-family: "Hackney";
      }


  }

}

.campaign-section {
  align-items: center;
}

.campaign-section:nth-child(2) {
  margin-top: 2em;
}

.campaign-section.submission-section {
  /* padding-bottom: 280px !important; */
  /* @media only screen and (max-width: 767px) {
    padding-bottom: 200px !important;
  }
  @media only screen and (max-width: 480px) {
    padding-bottom: 100px !important;
  } */
}

.campaign-period {
  font-size: 26px;
  font-weight: bold;

  @media only screen and (max-width: 767px) {
    font-size: 20px;
  }
}

.campaign-section {
  .header {
    @include section-header;
    @media only screen and (max-width: 767px) {
      font-size: 22px;
      text-align: center;
    }
  }
}
.prize-swiper-container {
  z-index: 1;
  max-width: 1100px !important;
  @media only screen and (max-width: 768px) {
    max-width: 800px !important;
  }
  @media only screen and (max-width: 500px) {
    max-width: 400px !important;
  }
}
/* ... */

